[tool.poetry]
name = "planetwatch"
version = "0.1.0"
description = "Code to make it easy to caluculate earnings, etc for planetwatch"
authors = ["errantp"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.7"
click = ">=8.0.1"
pycoingecko = "^2.2.0"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
pre-commit = "*"
isort = "*"
attr = "*"
pandas = "*"


[tool.isort]
profile = "black"

[tool.poetry.scripts]
planets = "planetwatch.core:cli"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
